--- a/index.html
+++ b/index.html
@@ -1,12 +1,30 @@
-<!DOCTYPE html>\n<html lang="en">\n<head>\n    <meta charset="UTF-8">\n    <meta http-equiv="X-UA-Compatible" content="IE=edge">\n    <meta name="viewport" content="width=device-width, initial-scale=1.0">\n    <title>Happy Birthday Mia</title>\n</head>\n<body><script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3157931036097677"
-     crossorigin="anonymous"></script>
-<!-- 1 -->
-<ins class="adsbygoogle"
-     style="display:block"
-     data-ad-client="ca-pub-3157931036097677"
-     data-ad-slot="9289887417"
-     data-ad-format="auto"
-     data-full-width-responsive="true"></ins>
-<script>
-     (adsbygoogle = window.adsbygoogle || []).push({});
-</script>\n    <h1>Happy Birthday Mia!</h1>\n    <p>Wishing you a day filled with happiness and a year filled with joy. Happy Birthday!</p>\n</body>\n</html>html></p></h1></body></title></head>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Happy Birthday Mia</title>
+</head>
+<body>
+
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3157931036097677"
+        crossorigin="anonymous"></script>
+    
+    <!-- Google AdSense Ad -->
+    <ins class="adsbygoogle"
+        style="display:block"
+        data-ad-client="ca-pub-3157931036097677"
+        data-ad-slot="9289887417"
+        data-ad-format="auto"
+        data-full-width-responsive="true"></ins>
+    
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({});
+    </script>
+
+    <h1>Happy Birthday Mia!</h1>
+    <p>Wishing you a day filled with happiness and a year filled with joy. Happy Birthday!</p>
+
+</body>
+         </html>
