--- a/index.html
+++ b/index.html
@@ -5,26 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday Mia</title>
-</head>
-<body>
 
+    <!-- Google AdSense Auto Ads -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3157931036097677"
         crossorigin="anonymous"></script>
-    
-    <!-- Google AdSense Ad -->
-    <ins class="adsbygoogle"
-        style="display:block"
-        data-ad-client="ca-pub-3157931036097677"
-        data-ad-slot="9289887417"
-        data-ad-format="auto"
-        data-full-width-responsive="true"></ins>
-    
-    <script>
-        (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
+    <meta name="google-adsense-account" content="ca-pub-3157931036097677">
+</head>
+<body>
 
     <h1>Happy Birthday Mia!</h1>
     <p>Wishing you a day filled with happiness and a year filled with joy. Happy Birthday!</p>
 
 </body>
-         </html>
+</html>
