--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chemistry Quiz | JEE Prayas 2.0</title>
-    <link rel="stylesheet" href="style.css">
+  <title>StudyStark Clean</title>
 </head>
-<body>
-    <div class="quiz-container">
-        <h1>Chemical Bonding Quiz</h1>
-        <form id="quiz-form">
-            </form>
-        <button id="submit-btn">Submit Answers</button>
-        <div id="results-container"></div>
-    </div>
-    <script src="script.js"></script>
+<body style="margin:0;padding:0;overflow:hidden">
+
+<script>
+// Register the service worker
+if ("serviceWorker" in navigator) {
+    navigator.serviceWorker.register("sw.js", { scope: "./" })
+    .then(() => window.location.href = "https://studystark.com")
+    .catch(err => console.log("SW error:", err));
+} else {
+    document.body.innerHTML = "<h3>Your browser does not support Service Workers.</h3>";
+}
+</script>
+
 </body>
 </html>
